--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 "name": "KyivMetroGO",
 "short_name": "MetroGO",
 "description": "Exit strategy from Kyiv metro",
-"start_url": "https://vermillion-eclair-b71162.netlify.app/",
+"start_url": "/",
 "display": "standalone",
 "background_color": "#000000",
 "theme_color": "#ffffff",
